Implementing plastic and brand (credit card) validations, Brazilian ID, Brazilian zip code and corrections to name and email validations.
