# handlers/validate.go
@@ -10,13 +10,16 @@ import (
 )
 
 // ValidateHandler godoc
-// @Summary Valida o formato dos dados fornecidos
-// @Description Valida diferentes tipos de dados, como email, CPF, nome e telefone
+// @Summary Validates provided data format
+// @Description Validates different types of data, including email, CPF, name, phone, RG, CEP, and credit card number
 // @Tags Validation
-// @Param email query string false "Email a ser validado"
-// @Param cpf query string false "CPF a ser validado"
-// @Param nome query string false "Nome a ser validado"
-// @Param telefone query string false "Telefone a ser validado"
+// @Param email query string false "Email to be validated"
+// @Param cpf query string false "CPF to be validated"
+// @Param nome query string false "Name to be validated"
+// @Param telefone query string false "Phone number to be validated"
+// @Param plastic query string false "Credit card number to be validated"
+// @Param rg query string false "RG to be validated"
+// @Param cep query string false "CEP (postal code) to be validated"
 // @Success 200 {object} models.ValidationResponse
 // @Failure 400 {object} models.ValidationResponse
 // @Router /validate [get]
@@ -31,15 +34,24 @@ func ValidateHandler(w http.ResponseWriter, r *http.Request) {
 		isValid, sanitizedValue, message := utils.ValidateCPF(cpf)
 		response = createResponse("cpf", cpf, sanitizedValue, isValid, message, start)
 	} else if nome := r.URL.Query().Get("nome"); nome != "" {
-		isValid, sanitizedValue, message := utils.ValidateNome(nome)
+		isValid, sanitizedValue, message := utils.ValidateName(nome)
 		response = createResponse("nome", nome, sanitizedValue, isValid, message, start)
 	} else if telefone := r.URL.Query().Get("telefone"); telefone != "" {
-		isValid, sanitizedValue, message := utils.ValidateTelefone(telefone)
+		isValid, sanitizedValue, message := utils.ValidatePhone(telefone)
 		response = createResponse("telefone", telefone, sanitizedValue, isValid, message, start)
+	} else if plastic := r.URL.Query().Get("plastic"); plastic != "" {
+		isValid, sanitizedValue, message := utils.ValidatePlastic(plastic)
+		response = createResponse("plastic", plastic, sanitizedValue, isValid, message, start)
+	} else if rg := r.URL.Query().Get("rg"); rg != "" {
+		isValid, sanitizedValue, message := utils.ValidateRG(rg)
+		response = createResponse("rg", rg, sanitizedValue, isValid, message, start)
+	} else if cep := r.URL.Query().Get("cep"); cep != "" {
+		isValid, sanitizedValue, message := utils.ValidateCEP(cep)
+		response = createResponse("cep", cep, sanitizedValue, isValid, message, start)
 	} else {
 		response = models.ValidationResponse{
 			StatusCode: http.StatusBadRequest,
-			Message:    "Nenhum parâmetro de validação fornecido",
+			Message:    "No validation parameter provided",
 			IsValid:    false,
 		}
 	}
